--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "devDependencies": {
     "ignore-loader": "^0.1.2",
-    "tslib": "^2.6.2",
     "ts-loader": "^9.3.1",
+    "tslib": "^2.6.2",
     "typescript": "^5.0.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -20,6 +20,7 @@
     "@codemirror/commands": "^6.3.0",
     "@codemirror/lang-python": "^6.1.3",
     "@codemirror/language": "^6.9.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.21.4",
     "@jupyterlab/outputarea": "^4.0.7",
     "@jupyterlab/rendermime": "^4.0.7",
